# stackfix

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SPEC.md  package.json  plan.md  prd.md  pyproject.toml
demo/: calc.py  test_calc.py
docs/: agents-md.md  configuration.md  getting-started.md  relay.md  slash-commands.md
relay/: .env.relay.example  Dockerfile  __init__.py  app.py  auth.py  config.py  docker-compose.yml  rate_limit.py  redis_client.py
scripts/: deploy_vps.sh  parse_selftest.py  postinstall.js
skills/stackfix-dev/: SKILL.md
stackfix/: agent.py  agents.py  cli.py  config.py  context.py  history.py  patching.py  safety.py  session.py  tui.py  util.py
tests/: conftest.py  test_agent_relay.py  test_cli.py  test_relay.py  test_tui.py
