[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackfix"
version = "0.2.0"
description = "Terminal-first agentic CLI that fixes failing commands using AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "textual>=0.55",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
stackfix = "stackfix.cli:main"

[tool.setuptools.packages.find]
include = ["stackfix*"]
